[package]
name = "json-autotune"
version = "0.1.0"
edition = "2021"
description = "JSON parser with SIMD optimization - AI auto-tuned"
authors = ["AutoResearch"]
license = "MIT"

[dependencies]
lexical-core = "1.0"
fast-float = "0.2"
hashbrown = "0.14"
smartstring = "1.0"
ahash = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"